--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -331,7 +331,7 @@ Show ratio with formulas and numbers
 
 ## Summary table
 
-| Population | Attribute |  Parameter Calculation |  Estimate of Parameter |  
+| Distribution | Attribute |  Parameter Calculation |  Estimate of Parameter |  
 |:----------:|:-------------------:|:----------------------:|:----------------------:|
 | People     |  Mean               | $\mu_{people} = \frac{\sum_{i=1}^{N}{X_i}}{N}$  |                        |
 | People     |  Variance           | $\sigma_{people}^2 = \frac{\sum_{i=1}^{N}{(X_i - \bar{X})^2}}{N}$        |                        |
