--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -71,17 +71,21 @@ When there is *one* **population of people** (see Figure 1A) there is a single d
 
 ### Method 1: Calculate the variance of infinite sample means
 
-In this first method, we use an infinite number of sample means and simply calculate the variance. Obviously, this is an impractical solution because we could never obtain an infinite number of samples and then calculate the variance for each sample. Conceptually, however, it's good to keep this calculation method in mind - since it reminds us of principles we've already learned about the variance of populations [^deep_sampling-2]
-
-[^deep_sampling-2]: As noted previously, the notation is incorrect and I should really have expressed this as an expected value to be correct. But for conceptual clarity I divide by infinity to make the linkages to other equations clear.
+In this first method, we use an infinite number of sample means and simply calculate the variance, see Equation \@ref(eq:popvarxbardeep) below. 
 
 \begin{equation} 
 \sigma_{\bar{x}}^2 = \frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \bar{\bar{x}})^2}}{A}
       (\#eq:popvarxbardeep)
 \end{equation} 
 
+Notice how Equation \@ref(eq:popvarxbardeep) for the variance of sample means in Figure 1B, is similar to the formula we use the variance of people, Equation \@ref(eq:popvardeep), in Figure 1A. The formula for the variance of sample means, Equation \@ref(eq:popvarxbardeep), differs because we are using on sample means ($\bar{x}$) instead of attributes of people ($X$). As well, we use $A$ to indicate the number of elements used (i.e., an infinite number of sample means) in the calculation rather than $N$. 
 
-Putting values in:
+
+Obviously, using Equation \@ref(eq:popvarxbardeep) to calculate the variance of an infinite set of sample means is an impractical solution because we could never obtain the infinite number of samples and then calculate the variance for this set. Conceptually, however, it's good to keep this calculation method in mind - since it reminds us of principles we've already learned about the variance of populations [^deep_sampling-2]
+
+[^deep_sampling-2]: As noted previously, the notation is incorrect and I should really have expressed this as an expected value to be correct. But for conceptual clarity I divide by infinity to make the linkages to other equations clear.
+
+But if we imagine a world where we could obtain the full infinite set of sample means we would use the formula as below: 
 
 $$
 \begin{aligned} 
@@ -90,13 +94,13 @@ $$
 \end{aligned} 
 $$
 
-Notice how this is similar to population formula when we are dealing with people. This formula differs for the typical formula because we are using on sample means ($\bar{x}$) instead of attributes of people ($X$). As well, we just use $A$ to indicate the number of elements used (i.e., an infinite number of sample means) in the calculation rather than $N$.
+Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is **calculated**, based an infinite number of sample means ($A = \infty$) using Method 1, to be $\sigma_{\bar{x}}^2 = 6.252944$. 
 
 **When there is only one population of people** this formula will reflect variability in sample means due to random sampling. When there is more than one population of people - it becomes more complicated. We'll discuss that situation in a future chapter.
 
 ### Method 2: CLT shortcut: *Calculation* of variance of infinite sample means
 
-Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means. There is a "shortcut formula" we can used based on the Central Limit Theorem (CLT). More specifically, the variance of the distribution of sample means depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population ($\sigma_{people}^2$). 
+Fortunately we don't need to obtain an infinite number of sample means to determine the variance of the distribution of an infinite number of sample means, Figure 1B. There is a "shortcut formula" we can used based on the Central Limit Theorem (CLT), see Equation \@ref(eq:popvarCLTxbardeep) below.
 
 
 \begin{equation} 
@@ -105,7 +109,13 @@ Fortunately we don't need to obtain an infinite number of sample means to determ
 \end{equation} 
 
 
-Putting values in:
+An inspection of Equation \@ref(eq:popvarCLTxbardeep) reveals the variance of the distribution of sample means (see Figure 1B) depends on both the number of people in each sample ($n$) and the variability in the people's heights in the population (see Figure 1B, $\sigma_{people}^2$). 
+ 
+The reason this formula works should not be obvious - at all. If you are looking at this formula trying to figure out why it works - I suggest you stop and just accept that it does work. If you want to understand why it works, I suggest you [consult](https://archive.org/details/statisticsfifthe00will) [@hays1994statistics] who provides a statistical proof for the Central Limit Theorem.
+
+It's helpful, moving forward to, think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *variability in means due to random sampling*. No matter the situation - this formula will always reflects the variability in sample means due ONLY to random sampling.
+
+Previously, we learned that the variance of the distribution of people in Figure 1A is \sigma_{people}^2=156.3236$. Consequently, we can use Equation \@ref(eq:popvarCLTxbardeep) to calculate the variance of the distribution of sample means in Figure 1B:
 
 $$
 \begin{aligned} 
@@ -115,9 +125,7 @@ $$
 \end{aligned} 
 $$
 
-The reason this formula works should not be obvious - at all. If you are looking at this formula trying to figure out why it works - I suggest you stop and just accept that it does work. If you want to understand why it works, I suggest you [consult](https://archive.org/details/statisticsfifthe00will) [@hays1994statistics] who provides a statistical proof for the Central Limit Theorem.
-
-It's helpful, moving forward to, think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *variability in means due to random sampling*. No matter the situation - this formula will always reflects the variability in sample means due ONLY to random sampling.
+Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is **calculated**, using Method 2 the CLT shortcut, to be $\sigma_{\bar{x}}^2 = 6.252944$. 
 
 ### Ratio comparison of two methods
 
@@ -255,16 +263,18 @@ s_{\bar{x}}^2 &= \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}\\
 \end{aligned} 
 $$
 
-Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is estimated, using Method 1, to be  $s_{\bar{x}}^2 = `r method1_var`$. Remember though `r method1_var` is just an *estimate* of the population value ($\sigma_{\bar{x}}^2$) based on three sample means.
+Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is **estimated**, based on three sample means ($a = 3$) using Method 1, to be  $s_{\bar{x}}^2 = `r method1_var`$. Remember though `r method1_var` is just an *estimate* of the population value ($\sigma_{\bar{x}}^2$) based on three sample means.
+
 
 ### Method 2: CLT shortcut: *Estimation* of variance of infinite sample means
 
-We can use the information presented in the table above in another way to estimate the variance of the distribution of sample means. Indeed, recall than another approach to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT).
+We can use the information presented in the table above in another way to estimate the variance of the distribution of sample means. Indeed, recall than another approach to calculating the variance of the distribution of sample means is to use the shortcut formula based on the Central Limit Theorem (CLT), Equation \@ref(eq:popvarCLTxbardeep) above, repeated below for clarity.
+.
 
 $$
-\begin{aligned} 
+\begin{aligned}
 \sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n}\\
-\end{aligned} 
+\end{aligned}
 $$
 
 #### Estimating $\sigma_{people}^2$ with $s_{people}^2$
