--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -137,7 +137,6 @@ Thus, far we have calculated the variance of the distribution of sample means us
 
 Although we can just look at the numbers resulting from these two methods and compare them, that's not how statisticians typically handle such comparisons. The approach used by statisticians to compare two numbers is to create a ratio. That is, take one number and divide it by the other number. If the two numbers are the same the ratio will be 1.00. If the ratio is larger than 1.00 it means the number on the top was bigger than the number on the bottom.
 
-You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result.
 
 $$
 \begin{aligned} 
@@ -148,12 +147,13 @@ $$
 \end{aligned} 
 $$
 
-In this section, we focused on actually **calculating** the variance of the distribution of sample means using two methods. But to actually calculate this variance we needed an infinite number of sample means (method 1) or knowledge of the population variance (method 2). Both are unrealistic methods to determining this value.
+You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result. [exapand]
+
+
+
+In this section, we focused on actually **calculating** the variance of the distribution of sample means using two methods. But to actually calculate this variance we needed an infinite number of sample means (Method 1) or knowledge of the population variance (Method 2). Both are unrealistic methods to determining this value.
 
 In the next section, below, we recognize that we can likely never know or calculate the variance of the distribution of sample means. Instead, we focus on **estimating** the variance of the distribution of sample means. An estimated value is an approximation of the actual value that will differ due to the effects of random sampling.
-
-
-
 
 ```{r, include=FALSE}
 # Set up sample information for rest of chapter
