--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -147,7 +147,7 @@ $$
 \end{aligned} 
 $$
 
-You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result. [exapand]
+You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result. [expand]
 
 
 
@@ -224,8 +224,8 @@ In this section we focus on estimating the variance of the distribution of sampl
 | Sample Number | Sample size ($n$) | Mean ($\bar{x} = \frac{\Sigma x_i}{n}$) | Variance ($s^2=\frac{\Sigma (x_i - \bar{x})^2}{n-1}$) |
 |:-------------:|:-----:|:-----------------------------:|:------------------------------------------------:|
 | 1             |  25 | `r sample_mean`      | `r est_pop_var`                         |
-| 1             |  25 | `r sample_mean2`     | `r est_pop_var2`                        |
-| 1             |  25 | `r sample_mean3`     | `r est_pop_var3`                        |
+| 2             |  25 | `r sample_mean2`     | `r est_pop_var2`                        |
+| 3             |  25 | `r sample_mean3`     | `r est_pop_var3`                        |
 
 
 ### Method 1: Estimate the variance of infinite sample means using 3 sample means
