--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -31,8 +31,20 @@ The following CRAN packages must be installed:
 | Required CRAN Packages |
 |-------------------|
 |tidyverse          |
+|remotes            |
+
+The following GitHub package must be installed:
+
+| Required GitHub Packages |
+|--------------------------|
+|spielmanlab/introverse |
 
 
+After the remotes package is installed, it can be used to install the introverse package from GitHub (an alternative "App Store"). If you get ask if you would like to install more recent versions of packages on your machine press "1" and Return to indicate "All" (if you are asked, you may not be).
+
+```{r, eval = FALSE}
+remotes::install_github("spielmanlab/introverse")
+```
 
 ## Objective
 
@@ -43,10 +55,42 @@ The objective of this chapter is to familiarize you with some key commands in th
 
 All of the commands in this chapter should be typed into the Console within R. If you see a command split over multiple lines, use SHIFT-RETURN (macOS) or SHIFT-ENTER (Windows) to move the next line that is part of the same command. 
 
+## Tidyverse help with the Introverse
+
+The **introverse** package is just additional documentation that is helpful for beginners - until you learn to read the standard R documentation. The first command we will use in this chapter is the **read_csv()** command. You get get the standard R help for this command using the code below in the R Console:
+
+```{r, eval = FALSE}
+library(tidyverse) # this actives the tidyverse
+?read_csv
+```
+
+This gives you help that looks like this:
+
+```{r, echo=FALSE, out.width="50%"}
+knitr::include_graphics("ch_tidy_intro/images/screenshot_R_help.png")
+```
+
+But you can obtain the better introverse documentation by typing the code below in the R Console:
+
+```{r, eval = FALSE}
+library(introverse) # this actives the intoverse help
+get_help("read_csv")
+```
+
+
+This gives you help that looks like this:
+
+
+```{r, echo=FALSE, out.width="50%"}
+knitr::include_graphics("ch_tidy_intro/images/screenshot_introverse_help.png")
+```
+
+
+Most importantly, when you scroll down on the introverse help pages - it gives you code examples that are easy to follow. If at any point during this course you want more information about how a command works use the introverse get_help() command.
 
 ## Basic tidyverse commands
 
-If you inspect the Files tab on the lower-right panel in R Studio you will see the file data_okcupid.csv. The code below loads that file.
+If you inspect the Files tab on the lower-right panel in R Studio you will see the file data_okcupid.csv. The code below loads that file. Recall you should tpe this code into the R Console.
 
 ```{r, eval = FALSE}
 library(tidyverse)
