--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -40,7 +40,7 @@ The following GitHub package must be installed:
 |spielmanlab/introverse |
 
 
-After the remotes package is installed, it can be used to install the introverse package from GitHub (an alternative "App Store"). If you get ask if you would like to install more recent versions of packages on your machine press "1" and Return to indicate "All" (if you are asked, you may not be).
+After the remotes package is installed, it can be used to install the introverse package from GitHub (an alternative "App Store"). If you get asked if you would like to install more recent versions of packages on your machine press "1" and Return to indicate "All" (if you are asked, you may not be).
 
 ```{r, eval = FALSE}
 remotes::install_github("spielmanlab/introverse")
@@ -60,13 +60,13 @@ All of the commands in this chapter should be typed into the Console within R. I
 The **introverse** package is just additional documentation that is helpful for beginners - until you learn to read the standard R documentation. The first command we will use in this chapter is the **read_csv()** command. You get get the standard R help for this command using the code below in the R Console:
 
 ```{r, eval = FALSE}
-library(tidyverse) # this actives the tidyverse
+library(tidyverse) # this actives the tidyverse commands
 ?read_csv
 ```
 
 This gives you help that looks like this:
 
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="70%"}
 knitr::include_graphics("ch_tidy_intro/images/screenshot_R_help.png")
 ```
 
@@ -81,12 +81,14 @@ get_help("read_csv")
 This gives you help that looks like this:
 
 
-```{r, echo=FALSE, out.width="50%"}
+```{r, echo=FALSE, out.width="70%"}
 knitr::include_graphics("ch_tidy_intro/images/screenshot_introverse_help.png")
 ```
 
 
-Most importantly, when you scroll down on the introverse help pages - it gives you code examples that are easy to follow. If at any point during this course you want more information about how a command works use the introverse get_help() command.
+Most importantly, when you scroll down on the introverse help pages - it gives you code examples that are easy to follow. If at any point during this course you want more information about how a command works use the introverse get_help() command. 
+
+The get_help() command is especially valuable because it tells you which package (of the many tidyverse packages) a particular command comes from. For example, you can see the read_csv() command is from the readr package when you inspect the introverse help above.
 
 ## Basic tidyverse commands
 
