--- a/07-workflow.Rmd
+++ b/07-workflow.Rmd
@@ -7,8 +7,7 @@ library(tidyverse)
 ## Required Packages
 
 
-The data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
-
+The data files below are used in this chapter. 
 
 | Required Data |
 |-------------------|
@@ -156,14 +155,18 @@ Regardless of the approach, it is critical to name your variables appropriately.
 
 Although failure to take this thoughtful approach at the data collection stage can be overcome - it is only overcome with substantial manual effort. Therefore, as noted previously, we strongly encourage you to follow the naming conventions we espouse here when you set up your data recording regime. Additionally, we encourage you to give careful thought in advance to the codes you will use to record missing data.
 
-### Naming conventions
+### File naming conventions
+
+I **strongly** suggest you check out these excellent [slides](https://slides.djnavarro.net/project-structure/#1) by Danielle Navarro on file name convention best practices.
+
+### Data column naming conventions
 
   To make your life easier down the road, it is critical you set up your spreadsheet or online survey such that it uses a naming convention prior to data collection. The naming conventions suggested here are adapted from the tidyverse [style guide](https://style.tidyverse.org).
 
 
 * Lowercase letters only
 
-* If two word column names are necessary, only use the underscore ("_") character to separate words in the name.
+* If using multiple words in a name (a good idea), only use the underscore ("_") character to separate words in the name.
 
 * Avoid short decontextualized variable names like q1, q2, q3, etc.
 
