--- a/21-enter_load.Rmd
+++ b/21-enter_load.Rmd
@@ -9,8 +9,7 @@ library(tidyverse)
 ## Required Packages
 
 
-The data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
-
+The data files below are used in this chapter. 
 
 | Required Data |
 |-------------------|
