--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -33,7 +33,7 @@ The variance of a population of 50,000 individuals is calculated using Equation 
 
 ## Random sampling process
 
-Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of $n$ = 25 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have an infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. Moreover, **because we sampled from a single population** the variability in sample means is due only to the **random sampling error** that occurs when the sample size is 25 ($n = 25$) and the population variance is 156.3236 (i.e., $\sigma_{people}^2 =156.3236$).
+Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of $n$ = 5 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have an infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. Moreover, **because we sampled from a single population** the variability in sample means is due only to the **random sampling error** that occurs when the sample size is 5 ($n = 5$) and the population variance is 156.3236 (i.e., $\sigma_{people}^2 =156.3236$).
 
 [Figure 1A and 1B goes here]
 
@@ -45,7 +45,7 @@ Typically, in psychology, when we use the word "population" we are referring to 
 
 Thinking of the distribution of sample mean as a population can be a bit tricky - since there are two populations that we could be referring to when we use the word "population". Notation helps to keep things straight. In this book, when we are talking about a distribution of people (see Figure 1A), we use $N$ to indicate the number people in the population and $n$ to refer to the number of people in a subset of the population (what we typically refer to as a sample). Likewise, when we are talking about a distribution of sample means (see Figure 1B), we use $A$ to indicate the number sample means in the population and $a$ to refer to the number of sample means in a subset of the population.
 
-Consider a concrete example. When we obtain a sample of people ($n$ = 25) we can think those people as being subset of the population of people ($N$=50,000), see Figure 1A. If we calculate a sample mean ($\bar{x}$) based on those 25 people we can think of that single sample mean ($a$ = 1) a being subset of a population of sample means ($A = \infty$), see Figure 1B. Alternatively, imagine we obtained three samples from the population of people, Figure 1A, each composed of 25 people ($n$ = 25 for each sample). Then we calculated the sample mean ($\bar{x}$) for each of the three samples. We could think of those three sample means ($a$ = 3) as being a subset of a population of sample means ($A = \infty$), see Figure 1B.
+Consider a concrete example. When we obtain a sample of people ($n$ = 5) we can think those people as being subset of the population of people ($N$=50,000), see Figure 1A. If we calculate a sample mean ($\bar{x}$) based on those 5 people we can think of that single sample mean ($a$ = 1) a being subset of a population of sample means ($A = \infty$), see Figure 1B. Alternatively, imagine we obtained three samples from the population of people, Figure 1A, each composed of 5 people ($n$ = 5 for each sample). Then we calculated the sample mean ($\bar{x}$) for each of the three samples. We could think of those three sample means ($a$ = 3) as being a subset of a population of sample means ($A = \infty$), see Figure 1B.
 
 ### Distribution of sample means as a population
 
@@ -85,16 +85,16 @@ Obviously, using Equation \@ref(eq:popvarxbardeep) to calculate the variance of 
 
 [^deep_sampling-2]: As noted previously, the notation is incorrect and I should really have expressed this as an expected value to be correct. But for conceptual clarity I divide by infinity to make the linkages to other equations clear.
 
-But if we imagine a world where we could obtain the full infinite set of sample means we would use the formula as below: 
+But imagine if we could obtain the full infinite set of sample means - then we could use the formula as below: 
 
 $$
 \begin{aligned} 
 \sigma_{\bar{x}}^2 &= \frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \bar{\bar{x}})^2}}{A}\\
-&= 6.252944\\
+&= 31.26472\\
 \end{aligned} 
 $$
 
-Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is **calculated**, based an infinite number of sample means ($A = \infty$) using Method 1, to be $\sigma_{\bar{x}}^2 = 6.252944$. 
+Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is **calculated**, based an infinite number of sample means ($A = \infty$) using Method 1, to be $\sigma_{\bar{x}}^2 = 31.26472$. 
 
 **When there is only one population of people** this formula will reflect variability in sample means due to random sampling. When there is more than one population of people - it becomes more complicated. We'll discuss that situation in a future chapter.
 
@@ -115,17 +115,17 @@ The reason this formula works should not be obvious - at all. If you are looking
 
 It's helpful, moving forward to, think of this formula ($\frac{\sigma_{people}^2}{n}$) as representing the *variability in means due to random sampling*. No matter the situation - this formula will always reflects the variability in sample means due ONLY to random sampling.
 
-Previously, we learned that the variance of the distribution of people in Figure 1A is \sigma_{people}^2=156.3236$. Consequently, we can use Equation \@ref(eq:popvarCLTxbardeep) to calculate the variance of the distribution of sample means in Figure 1B:
+Previously, we learned that the variance of the distribution of people in Figure 1A is $\sigma_{people}^2=156.3236$. Consequently, we can use Equation \@ref(eq:popvarCLTxbardeep) to calculate the variance of the distribution of sample means in Figure 1B:
 
 $$
 \begin{aligned} 
 \sigma_{\bar{x}}^2 &= \frac{\sigma_{people}^2}{n}\\
-&= \frac{156.3236}{25}\\
-&= 6.252944\\
+&= \frac{156.3236}{5}\\
+&= 31.26472\\
 \end{aligned} 
 $$
 
-Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is **calculated**, using Method 2 the CLT shortcut, to be $\sigma_{\bar{x}}^2 = 6.252944$. 
+Thus, the "population" variance of the distribution of sample means ($\sigma_{\bar{x}}^2$, see Figure 1B) is **calculated**, using Method 2 the CLT shortcut, to be $\sigma_{\bar{x}}^2 = 31.26472$. 
 
 ### Ratio comparison of two methods
 
@@ -142,14 +142,12 @@ $$
 \begin{aligned} 
 \text{ratio comparing methods} &= \frac{\text{variance of sample means calculated using sample means}}{\text{variance of sample means calculated using CLT shortcut formula}}\\
 &=\frac{\frac{\sum_{i=1}^{A=\infty}{(\bar{x}_i - \bar{\bar{x}})^2}}{A}}{\frac{\sigma_{people}^2}{n}}\\
-&=\frac{6.252944}{6.252944}\\
+&=\frac{31.26472}{31.26472}\\
 &= 1.00\\
 \end{aligned} 
 $$
 
-You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result. [expand]
-
-
+You can see the ratio comparing these two methods below is 1.00 - so we conclude two methods produced the same result. If the number on the top of the ratio was the *larger* of the two, then the value of the ratio would be greater than 1.00.  In contrast, if the number on the top of the ratio was the *smaller* of the two, then the value of the ratio would be less than 1.00. Be sure you understand how to interpet the value of a ratio using these rules before continuing.
 
 In this section, we focused on actually **calculating** the variance of the distribution of sample means using two methods. But to actually calculate this variance we needed an infinite number of sample means (Method 1) or knowledge of the population variance (Method 2). Both are unrealistic methods to determining this value.
 
@@ -215,17 +213,20 @@ xbarbar <- round((barx+barxb+barxc), 3)
 xbar_vector <- c(barx, barxb, barxc)
 method1_var <- round(var(xbar_vector),3)
 
+
+est_mean_var_clt <- est_pop_var_pooled/n_sample
+
 ```
 
 ## Estimating sample mean distribution variance
 
-In this section we focus on estimating the variance of the distribution of sample means using sample data. Imagine that we obtained three samples (each $n$ = 25) from the population of people illustrated in Figure 1A. The statistics for those three sample are presented below.
+In this section we focus on estimating the variance of the distribution of sample means using sample data. Imagine that we obtained three samples (each $n$ = 5) from the population of people illustrated in Figure 1A. The statistics for those three sample are presented below.
 
 | Sample Number | Sample size ($n$) | Mean ($\bar{x} = \frac{\Sigma x_i}{n}$) | Variance ($s^2=\frac{\Sigma (x_i - \bar{x})^2}{n-1}$) |
 |:-------------:|:-----:|:-----------------------------:|:------------------------------------------------:|
-| 1             |  25 | `r sample_mean`      | `r est_pop_var`                         |
-| 2             |  25 | `r sample_mean2`     | `r est_pop_var2`                        |
-| 3             |  25 | `r sample_mean3`     | `r est_pop_var3`                        |
+| 1             |  5 | `r sample_mean`      | `r est_pop_var`                         |
+| 2             |  5 | `r sample_mean2`     | `r est_pop_var2`                        |
+| 3             |  5 | `r sample_mean3`     | `r est_pop_var3`                        |
 
 
 ### Method 1: Estimate the variance of infinite sample means using 3 sample means
@@ -237,7 +238,7 @@ s_{\bar{x}}^2 = \frac{\sum_{i=1}^{a=3}{(\bar{x}_i - \bar{\bar{x}})^2}}{a-1}
       (\#eq:estpopvarxbardeep)
 \end{equation} 
 
-In this example (see table above), we have 3 sample means (each based on n = 25) so $a = 3$. Let's estimate the variance of the distribution of sample means (Figure 1B) using these three sample means.
+In this example (see table above), we have 3 sample means (each based on n = 5) so $a = 3$. Let's estimate the variance of the distribution of sample means (Figure 1B) using these three sample means.
 
 First, we calculate the mean of the three sample means ($\bar{\bar{x}}$) because we will need that in the variance formula.
 
@@ -286,10 +287,10 @@ $$
 s_{people}^2 &= MSE_{people}\\
 &= \frac{\sum_{i=1}^{a=3}(n_i-1)s_i^2}{\sum_{i=1}^{a}(n_i-1)} \\
 &= \frac{(n_1-1)s_1^2 + (n_2-1)s_2^2 + (n_3-1)s_3^2}{(n_1-1)+(n_2-1)+(n_3-1)} \\
-&= \frac{(25-1)s_1^2 + (25-1)s_2^2 + (25-1)s_3^2}{(25-1)+(25-1)+(25-1)} \\
-&= \frac{(25-1)`r est_pop_var` + (25-1)`r est_pop_var2` +(25-1)`r est_pop_var3`}{(25-1) + (25-1) + (25-1)} \\
-&= \frac{`r 24*est_pop_var` + `r 24*est_pop_var2` + `r 24*est_pop_var3`}{75 -3} \\
-&= \frac{`r as.character((24*est_pop_var + 24*est_pop_var2 +  24*est_pop_var3))`}{72} \\
+&= \frac{(5-1)s_1^2 + (5-1)s_2^2 + (5-1)s_3^2}{(5-1)+(5-1)+(5-1)} \\
+&= \frac{(5-1)`r est_pop_var` + (5-1)`r est_pop_var2` +(5-1)`r est_pop_var3`}{(5-1) + (5-1) + (5-1)} \\
+&= \frac{`r 4*est_pop_var` + `r 4*est_pop_var2` + `r 4*est_pop_var3`}{15 -3} \\
+&= \frac{`r as.character((4*est_pop_var + 4*est_pop_var2 +  4*est_pop_var3))`}{12} \\
 &= `r est_pop_var_pooled` \\
 \end{aligned}
 $$
@@ -302,14 +303,14 @@ s_{people}^2 &= MSE_{people}\\
 &= \frac{s_1^2 + s_2^2 + s_3^2}{3} \\
 &= \frac{`r est_pop_var` + `r est_pop_var2` + `r est_pop_var3` }{3} \\
 &= \frac{660.7}{3} \\
-&= `r est_pop_var_pooled` \\
+&= `r est_mean_var_clt` \\
 \end{aligned}
 $$
 
 
 The number we just calculated,  $s_{people}^2 =`r est_pop_var_pooled`$, is an estimate of the variance of the population of people illustrated in Figure 1A. You could think of this number as an average variance estimate.
 
-We created the average variance estimate,$s_{people}^2 =`r est_pop_var_pooled`$, by combining three sample estimates of the variance of the population of people. Each sample estimate was based on 25 people (i.e., 24 degrees of freedom). But the average variance estimate we just calculated ( $s_{people}^2 =`r est_pop_var_pooled`$) is based on 75 people - people from all three samples (i.e., 72 degrees of freedom). Because we combined people from all three samples the average variance estimate is a better estimate of the variance of the population of people than any single sample estimate. In technical terms, we say the variance estimate we just calculate is a better estimate because of the higher degrees of freedom (72) to compared to a individual sample estimate (with only 24 degrees of freedom).
+We created the average variance estimate,$s_{people}^2 =`r est_pop_var_pooled`$, by combining three sample estimates of the variance of the population of people. Each sample estimate was based on 5 people (i.e., 4 degrees of freedom). But the average variance estimate we just calculated ( $s_{people}^2 =`r est_pop_var_pooled`$) is based on 75 people - people from all three samples (i.e., 72 degrees of freedom). Because we combined people from all three samples the average variance estimate is a better estimate of the variance of the population of people than any single sample estimate. In technical terms, we say the variance estimate we just calculate is a better estimate because of the higher degrees of freedom (72) to compared to a individual sample estimate (with only 24 degrees of freedom).
 
 We use different names to refer to the resulting average variance estimate - we could just call it a better estimate of the population variance ($s_{people}^2$). But statisticians also use the term pooled variance ($s_{pooled}^2$) to refer it. Other times statisticians use the term Mean Square Error ($MSE$) to refer to it. You should realize that these are all just synonyms for variance of the population of people illustrated in Figure 1A: $s_{people}^2 = s_{pooled}^2 = MSE_{people} = MSE$.
 
